[tool.poetry]
name = "repl_python3_natanbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
bs4 = "^0.0.1"
pandas = "^1.3.4"
unicodecsv = "^0.14.1"
gspread = "^4.0.1"
oauth2client = "^4.1.3"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
